--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -82,10 +82,10 @@
       "name": "logs de defectos",
       "version": "1.0",
       "notes": "",
-      "filename": "log-defectos-nicolas.pdf",
+      "filename": "logsDefectos.pdf",
       "contentType": "application/pdf",
-      "updatedAt": "2025-08-09",
-      "url": "./docs/lider-de-equipo/logs-de-defectos/log-defectos-nicolas.pdf"
+      "updatedAt": "2025-08-12",
+      "url": "./docs/lider-de-equipo/logs-de-defectos/logsDefectos.pdf"
     },
     {
       "role": "líder de planeación",
