fix: actas y logs lider de calidad

--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -35,7 +35,7 @@
       "filename": "Log Defectos 01.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-11",
-      "url": "./docs/lider-de-calidad/logs-de-defectos/Log Defectos 01.pdf"
+      "url": "./docs/lider-de-calidad/logs-de-defectos/LogDefectos01.pdf"
     },
     {
       "role": "líder de calidad",
