--- a/data/templates-manifest.json
+++ b/data/templates-manifest.json
@@ -5,10 +5,10 @@
       "category": "actas",
       "role": "lider de calidad",
       "description": "",
-      "filename": "Plantilla acta de iniciación.docx",
+      "filename": "Plantilla-acta-de-iniciación.docx",
       "contentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
       "updatedAt": "2025-08-12",
-      "url": "./docs/plantillas/Plantilla acta de iniciación.docx",
+      "url": "./docs/plantillas/Plantilla-acta-de-iniciación.docx",
       "tags": ["reuniones", "documentación"]
     },
     {
@@ -16,21 +16,21 @@
       "category": "actas",
       "role": "lider de calidad",
       "description": "",
-      "filename": "Plantilla actas.docx",
+      "filename": "Plantilla-actas.docx",
       "contentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
       "updatedAt": "2025-08-12",
       "url": "./docs/plantillas/Plantilla actas.docx",
       "tags": ["reuniones", "documentación"]
     },
     {
-      "name": "Plantilla bitacoras de tiempo",
+      "name": "Plantilla-bitacoras-de-tiempo",
       "category": "bitacoras",
       "role": "todos",
       "description": "",
-      "filename": "Plantilla bitacoras de tiempo.doc",
+      "filename": "Plantilla-bitacoras-de-tiempo.doc",
       "contentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
       "updatedAt": "2025-08-12",
-      "url": "./docs/plantillas/Plantilla bitacoras de tiempo.doc",
+      "url": "./docs/plantillas/Plantilla-bitacoras-de-tiempo.doc",
       "tags": ["documentación", "desarrollo", "reuniones"]
     },
     {
@@ -38,10 +38,10 @@
       "category": "plantilla",
       "role": "lider de planeación",
       "description": "",
-      "filename": "Plantilla control de asignaciones.xlsx",
+      "filename": "Plantilla-control-de-asignaciones.xlsx",
       "contentType": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
       "updatedAt": "2025-08-12",
-      "url": "./docs/plantillas/Plantilla control de asignaciones.xlsx",
+      "url": "./docs/plantillas/Plantilla-control-de-asignaciones.xlsx",
       "tags": ["documentación"]
     },
     {
@@ -49,10 +49,10 @@
       "category": "bitacoras",
       "role": "todos",
       "description": "",
-      "filename": "Plantilla log defectos.docx",
+      "filename": "Plantilla-log-defectos.docx",
       "contentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
       "updatedAt": "2025-08-12",
-      "url": "./docs/plantillas/Plantilla log defectos.docx",
+      "url": "./docs/plantillas/Plantilla-log-defectos.docx",
       "tags": ["reuniones", "documentación", "desarrollo"]
     },
     {
@@ -60,10 +60,10 @@
       "category": "bitacoras",
       "role": "lider de calidad",
       "description": "",
-      "filename": "Plantilla script definición de procesos.docx",
+      "filename": "Plantilla-script-definición-de-procesos.docx",
       "contentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
       "updatedAt": "2025-08-12",
-      "url": "./docs/plantillas/Plantilla script definición de procesos.docx",
+      "url": "./docs/plantillas/Plantilla-script-definición-de-procesos.docx",
       "tags": ["reuniones", "documentación", "desarrollo"]
     }
   ]
