--- a/data/templates-manifest.json
+++ b/data/templates-manifest.json
@@ -19,7 +19,7 @@
       "filename": "Plantilla-actas.docx",
       "contentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
       "updatedAt": "2025-08-12",
-      "url": "./docs/plantillas/Plantilla actas.docx",
+      "url": "./docs/plantillas/Plantilla-actas.docx",
       "tags": ["reuniones", "documentación"]
     },
     {
