--- a/data/templates-manifest.json
+++ b/data/templates-manifest.json
@@ -23,7 +23,7 @@
       "tags": ["reuniones", "documentación"]
     },
     {
-      "name": "Plantilla-bitacoras-de-tiempo",
+      "name": "Plantilla bitacoras de tiempo",
       "category": "bitacoras",
       "role": "todos",
       "description": "",
