--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -156,6 +156,16 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-08-09",
       "url": "./docs/lider-de-equipo/soporte-de-realizacion.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "bitacoras de tiempo",
+      "version": "1.0",
+      "notes": "",
+      "filename": "bitacoras-de-tiempo.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-09",
+      "url": "./docs/lider-de-soporte/bitacora-de-tiempo/bitacoras-de-tiempo.pdf"
     }
   ]
 }
