update lider de desarrollo

--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -72,10 +72,10 @@
       "name": "logs de defectos",
       "version": "1.0",
       "notes": "",
-      "filename": "LogDefectos.docx.pdf",
+      "filename": "LogDefectos.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-12",
-      "url": "./docs/lider-de-desarrollo/logs-de-defectos/LogDefectos.docx.pdf"
+      "url": "./docs/lider-de-desarrollo/logs-de-defectos/LogDefectos.pdf"
     },
     {
       "role": "líder de equipo",
