fix: lider de calidad

--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -32,10 +32,10 @@
       "name": "logs de defectos",
       "version": "1.0",
       "notes": "",
-      "filename": "LogDefectos01.pdf",
+      "filename": "logdedefectos.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-11",
-      "url": "./docs/lider-de-calidad/logs-de-defectos/LogDefectos01.pdf"
+      "url": "./docs/lider-de-calidad/logs-de-defectos/logdedefectos.pdf"
     },
     {
       "role": "líder de calidad",
