--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -166,6 +166,26 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-08-09",
       "url": "./docs/lider-de-soporte/bitacora-de-tiempo/bitacoras-de-tiempo.pdf"
+    },
+    {
+      "role": "líder de desarrollo",
+      "name": "bitacoras de tiempo",
+      "version": "1.1",
+      "notes": "",
+      "filename": "BitacoraTiempoV1.1.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-14",
+      "url": "./docs/lider-de-desarrollo/bitacoras-de-tiempo/BitacoraTiempoV1.1.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "control de versiones",
+      "version": "1.1",
+      "notes": "",
+      "filename": "control-de-versionesV1.1.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-14",
+      "url": "./docs/lider-de-soporte/control-de-versionesV1.1.pdf"
     }
   ]
 }
