--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -171,7 +171,7 @@
       "role": "líder de desarrollo",
       "name": "bitacoras de tiempo",
       "version": "1.1",
-      "notes": "",
+      "notes": "Ajuste en la bitacora de tiempo para que corresponda con los demas documentos",
       "filename": "BitacoraTiempoV1.1.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-14",
@@ -181,7 +181,7 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.1",
-      "notes": "",
+      "notes": "update",
       "filename": "control-de-versionesV1.1.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-14",
