--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -186,6 +186,36 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-08-14",
       "url": "./docs/lider-de-soporte/control-de-versionesV1.1.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "script",
+      "version": "1.1",
+      "notes": "Se ajustaron los criterios de entradas y salidas",
+      "filename": "SCRIPT_Definicion_de_procesosV1.1.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-14",
+      "url": "./docs/lider-de-calidad/SCRIPT_Definicion_de_procesosV1.1.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "acta de iniciacion",
+      "version": "1.1",
+      "notes": "Correccion a las metricas de los objetivos de cada rol",
+      "filename": "1.1_Acta_Iniciación_8_08_2025.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-14",
+      "url": "./docs/lider-de-calidad/actas-de-reuniones/1.1_Acta_Iniciación_8_08_2025.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "control de versiones",
+      "version": "1.2",
+      "notes": "update",
+      "filename": "control-de-versionesV1.2.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-14",
+      "url": "./docs/lider-de-soporte/control-de-versionesV1.2.pdf"
     }
   ]
 }
