--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -135,7 +135,7 @@
       "filename": "control-de-versiones.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-09",
-      "url": "./docs/lider-de-soporte/control-de-versiones.pdf"
+      "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versiones.pdf"
     },
     {
       "role": "líder de equipo",
@@ -185,7 +185,7 @@
       "filename": "control-de-versionesV1.1.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-14",
-      "url": "./docs/lider-de-soporte/control-de-versionesV1.1.pdf"
+      "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.1.pdf"
     },
     {
       "role": "líder de calidad",
@@ -215,7 +215,37 @@
       "filename": "control-de-versionesV1.2.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-14",
-      "url": "./docs/lider-de-soporte/control-de-versionesV1.2.pdf"
+      "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.2.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "control asignaciones",
+      "version": "1.1",
+      "notes": "Se dividieron las tareas grupales a tareas individuales",
+      "filename": "dt_ptl_controlAsignacionesV1.1.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-14",
+      "url": "./docs/lider-de-planeacion/dt_ptl_controlAsignacionesV1.1.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "bitacoras de tiempo",
+      "version": "1.1",
+      "notes": "Se ajustaron las horas para que concidieran con el tiempo real",
+      "filename": "bitacoras-de-tiempoV1.1.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-14",
+      "url": "./docs/lider-de-soporte/bitacora-de-tiempo/bitacoras-de-tiempoV1.1.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "control de versiones",
+      "version": "1.3",
+      "notes": "update",
+      "filename": "control-de-versionesV1.3.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-14",
+      "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.3.pdf"
     }
   ]
 }
