--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -216,6 +216,66 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-08-15",
       "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.4.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "control asignaciones",
+      "version": "1.2",
+      "notes": "Actualizacion del nombre del proyecto",
+      "filename": "dt_ptl_controlAsignacionesV1.2.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-15",
+      "url": "./docs/lider-de-planeacion/dt_ptl_controlAsignacionesV1.2.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "script",
+      "version": "1.2",
+      "notes": "cambio en la definición del proyecto",
+      "filename": "SCRIPT_Definicion_de_procesosV1.2.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-15",
+      "url": "./docs/lider-de-planeacion/SCRIPT_Definicion_de_procesosV1.2.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "acta de iniciacion",
+      "version": "1.2",
+      "notes": "cambio en la definición del proyecto",
+      "filename": "Acta_Iniciación_8_08_2025V1.2.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-15",
+      "url": "./docs/lider-de-planeacion/Acta_Iniciación_8_08_2025V1.2.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "actas de reuniones",
+      "version": "1.2",
+      "notes": "cambio en la definición del proyecto",
+      "filename": "01_ACTA_0608225V1.2.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-15",
+      "url": "./docs/lider-de-planeacion/01_ACTA_0608225V1.2.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "log de defectos",
+      "version": "1.1",
+      "notes": "Se añadio un nuevo Log",
+      "filename": "logDefectosV1.1.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-15",
+      "url": "./docs/lider-de-planeacion/log-de-defectos/logDefectosV1.1.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "control de versiones",
+      "version": "1.5",
+      "notes": "update",
+      "filename": "control-de-versionesV1.5.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-15",
+      "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.5.pdf"
     }
   ]
 }
