--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -245,7 +245,7 @@
       "filename": "Acta_Iniciación_8_08_2025V1.2.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-16",
-      "url": "./docs/lider-de-calidad/Acta_Iniciación_8_08_2025V1.2.pdf"
+      "url": "./docs/lider-de-calidad/Acta_Iniciación_8_08_2025V.1.2.pdf"
     },
     {
       "role": "líder de calidad",
@@ -255,7 +255,7 @@
       "filename": "01_ACTA_0608225V1.2.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-16",
-      "url": "./docs/lider-de-calidad/01_ACTA_0608225V1.2.pdf"
+      "url": "./docs/lider-de-calidad/actas-de-reuniones/01_ACTA_0608225V1.2.pdf"
     },
     {
       "role": "líder de calidad",
