add: roles (iniciacion y estrategia)

--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -11,6 +11,7 @@
       "role": "líder de calidad",
       "name": "actas de reuniones",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "01_ACTA_0608225.pdf",
       "contentType": "application/pdf",
@@ -21,6 +22,7 @@
       "role": "líder de calidad",
       "name": "bitacoras de tiempo",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "Bitacora01_08082025.pdf",
       "contentType": "application/pdf",
@@ -31,6 +33,7 @@
       "role": "líder de calidad",
       "name": "acta de iniciacion",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "Acta Iniciación 8_08_2025.pdf",
       "contentType": "application/pdf",
@@ -41,6 +44,7 @@
       "role": "líder de calidad",
       "name": "script",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "SCRIPT_Definicion_de_procesos.pdf",
       "contentType": "application/pdf",
@@ -51,6 +55,7 @@
       "role": "líder de desarrollo",
       "name": "bitacoras de tiempo",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "BitacoraTiempo.pdf",
       "contentType": "application/pdf",
@@ -61,6 +66,7 @@
       "role": "líder de planeación",
       "name": "bitacoras de tiempo",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "BitacoraTiempo.pdf",
       "contentType": "application/pdf",
@@ -71,6 +77,7 @@
       "role": "líder de planeación",
       "name": "control asignaciones",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "dt_ptl_controlAsignaciones.pdf",
       "contentType": "application/pdf",
@@ -81,6 +88,7 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "control-de-versiones.pdf",
       "contentType": "application/pdf",
@@ -91,6 +99,7 @@
       "role": "líder de equipo",
       "name": "bitacoras de tiempo",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "Bitacora_120250812.pdf",
       "contentType": "application/pdf",
@@ -101,6 +110,7 @@
       "role": "líder de equipo",
       "name": "soporte de realizacion",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "soporte-de-realizacion.pdf",
       "contentType": "application/pdf",
@@ -111,6 +121,7 @@
       "role": "líder de soporte",
       "name": "bitacoras de tiempo",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "",
       "filename": "bitacoras-de-tiempo.pdf",
       "contentType": "application/pdf",
@@ -121,6 +132,7 @@
       "role": "líder de desarrollo",
       "name": "bitacoras de tiempo",
       "version": "1.1",
+      "phase": "iniciación",
       "notes": "Ajuste en la bitacora de tiempo para que corresponda con los demas documentos",
       "filename": "BitacoraTiempoV1.1.pdf",
       "contentType": "application/pdf",
@@ -131,6 +143,7 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.1",
+      "phase": "iniciación",
       "notes": "update",
       "filename": "control-de-versionesV1.1.pdf",
       "contentType": "application/pdf",
@@ -141,6 +154,7 @@
       "role": "líder de calidad",
       "name": "script",
       "version": "1.1",
+      "phase": "iniciación",
       "notes": "Se ajustaron los criterios de entradas y salidas",
       "filename": "SCRIPT_Definicion_de_procesosV1.1.pdf",
       "contentType": "application/pdf",
@@ -151,6 +165,7 @@
       "role": "líder de calidad",
       "name": "acta de iniciacion",
       "version": "1.1",
+      "phase": "iniciación",
       "notes": "Correccion a las metricas de los objetivos de cada rol",
       "filename": "1.1_Acta_Iniciación_8_08_2025.pdf",
       "contentType": "application/pdf",
@@ -161,6 +176,7 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.2",
+      "phase": "iniciación",
       "notes": "update",
       "filename": "control-de-versionesV1.2.pdf",
       "contentType": "application/pdf",
@@ -171,6 +187,7 @@
       "role": "líder de planeación",
       "name": "control asignaciones",
       "version": "1.1",
+      "phase": "iniciación",
       "notes": "Se dividieron las tareas grupales a tareas individuales",
       "filename": "dt_ptl_controlAsignacionesV1.1.pdf",
       "contentType": "application/pdf",
@@ -181,6 +198,7 @@
       "role": "líder de soporte",
       "name": "bitacoras de tiempo",
       "version": "1.1",
+      "phase": "iniciación",
       "notes": "Se ajustaron las horas para que concidieran con el tiempo real",
       "filename": "bitacoras-de-tiempoV1.1.pdf",
       "contentType": "application/pdf",
@@ -191,6 +209,7 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.3",
+      "phase": "iniciación",
       "notes": "update",
       "filename": "control-de-versionesV1.3.pdf",
       "contentType": "application/pdf",
@@ -201,6 +220,7 @@
       "role": "líder de calidad",
       "name": "log de defectos",
       "version": "1.0",
+      "phase": "iniciación",
       "notes": "Unificacion de los logs de defectos de cada Lider",
       "filename": "logDefectosV1.0.pdf",
       "contentType": "application/pdf",
@@ -211,6 +231,7 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.4",
+      "phase": "iniciación",
       "notes": "update",
       "filename": "control-de-versionesV1.4.pdf",
       "contentType": "application/pdf",
@@ -221,6 +242,7 @@
       "role": "líder de planeación",
       "name": "control asignaciones",
       "version": "1.2",
+      "phase": "iniciación",
       "notes": "Actualizacion del nombre del proyecto",
       "filename": "dt_ptl_controlAsignacionesV1.2.pdf",
       "contentType": "application/pdf",
@@ -231,6 +253,7 @@
       "role": "líder de calidad",
       "name": "script",
       "version": "1.2",
+      "phase": "iniciación",
       "notes": "cambio en la definición del proyecto",
       "filename": "SCRIPT_Definicion_de_procesosV1.2.pdf",
       "contentType": "application/pdf",
@@ -241,6 +264,7 @@
       "role": "líder de calidad",
       "name": "acta de iniciacion",
       "version": "1.2",
+      "phase": "iniciación",
       "notes": "cambio en la definición del proyecto",
       "filename": "Acta_Iniciación_8_08_2025V1.2.pdf",
       "contentType": "application/pdf",
@@ -251,6 +275,7 @@
       "role": "líder de calidad",
       "name": "actas de reuniones",
       "version": "1.2",
+      "phase": "iniciación",
       "notes": "cambio en la definición del proyecto",
       "filename": "01_ACTA_0608225V1.2.pdf",
       "contentType": "application/pdf",
@@ -261,6 +286,7 @@
       "role": "líder de calidad",
       "name": "log de defectos",
       "version": "1.1",
+      "phase": "iniciación",
       "notes": "Se añadio un nuevo Log",
       "filename": "logDefectosV1.1.pdf",
       "contentType": "application/pdf",
@@ -271,6 +297,7 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.5",
+      "phase": "iniciación",
       "notes": "update",
       "filename": "control-de-versionesV1.5.pdf",
       "contentType": "application/pdf",
@@ -281,7 +308,8 @@
       "role": "líder de calidad",
       "name": "script",
       "version": "1.3",
-      "notes": "Se cambio del script se arreglo un criterio de entrada y una entrada que es el problema Need Statement",
+      "phase": "iniciación",
+      "notes": "Se cambio del script se arreglo un criterio de entrada y una entrada que es el problema Need Statement",
       "filename": "SCRIPT_Definicion_de_procesosV1.3.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-16",
@@ -291,17 +319,29 @@
       "role": "líder de calidad",
       "name": "acta de iniciacion",
       "version": "1.3",
+      "phase": "iniciación",
       "notes": "Correccion de objetivos y metricas",
       "filename": "1.3_Acta_Iniciación_8_08_2025.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-16",
       "url": "./docs/lider-de-calidad/actas-de-reuniones/1.3_Acta_Iniciación_8_08_2025.pdf"
-    }
-    ,
+    },
     {
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.6",
+      "phase": "iniciación",
+      "notes": "update",
+      "filename": "control-de-versionesV1.6.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-16",
+      "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.6.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "control de versiones",
+      "version": "1.6",
+      "phase": "iniciación",
       "notes": "update",
       "filename": "control-de-versionesV1.6.pdf",
       "contentType": "application/pdf",
